代码结构大调整

--- a/array.html
+++ b/array.html
@@ -645,7 +645,7 @@ http://www.w3.org/TR/html4/strict.dtd">
           </div>
         </div>
 
-        <script type="text/javascript" src="utils.js"></script>
+        <script type="text/javascript" src="utils/base.js"></script>
         <script>
           // @global xq 全局变量命名空间
           var xq = {};
