--- a/cssCommonDemo.html
+++ b/cssCommonDemo.html
@@ -168,7 +168,7 @@
 
       </div>
       
-      <script src="./utils.js" type="text/javascript"></script>
+      <script src="utils/base.js" type="text/javascript"></script>
       <script>
         
         init();
