--- a/dragDrop.html
+++ b/dragDrop.html
@@ -26,7 +26,7 @@
         <!-- 拖动提示内容 -->
         <div id="status" class="status"></div>
 
-        <script type="text/javascript" src="utils.js"></script>
+        <script type="text/javascript" src="utils/base.js"></script>
         <script>
           // 原生js实现拖放
           var DragDrop = function(dragId){
