--- a/event.html
+++ b/event.html
@@ -18,7 +18,7 @@
         <input id="a" type="radio" name="a" value="a" class="demo1">aaaaaaa
         <input id="b" type="radio" name="a" value="b" class="demo1">bbbbbbb
         
-        <script type="text/javascript" src="utils.js"></script>
+        <script type="text/javascript" src="utils/base.js"></script>
         <script>
           // 来源 http://www.zhihu.com/question/31964586
           // 根据当前规范，顺序应该是 click -> input -> change...（详见知乎回答）
