--- a/nodeOperate.html
+++ b/nodeOperate.html
@@ -103,7 +103,7 @@
       </div>
     </div>
     
-    <script type="text/javascript" src="utils.js"></script>
+    <script type="text/javascript" src="utils/base.js"></script>
     <script>
       // 《javascript高级程序设计》 第10章第一节
       window.onload = function(){
