--- a/timer(jq).html
+++ b/timer(jq).html
@@ -74,7 +74,6 @@
 
                 var $countDownWrap = $('#con_apa2');
                 /**
-                 * 同事代码，后续优化之
                  * 3分钟的倒计时(计时器写法2)： 实际项目中， 计时器与业务逻辑解耦优雅实现
                  */
                 var CountDown2 = {
@@ -214,7 +213,7 @@
                   alert('倒计时间到，处理业务吧！');
                 }
 
-                // 计时器1启动(updateDom 方法待优化)
+                // 计时器1启动
                 countDown1_init();
                 // 计时器2启动
                 CountDown2.init($countDownWrap);
