--- a/vue/vueDemo.html
+++ b/vue/vueDemo.html
@@ -210,7 +210,7 @@
       </div>
 
       <script src="vue.js"></script>
-      <script src="../utils.js"></script>
+      <script src="../utils/base.js"></script>
       <script type="text/javascript">
         // 全局变量
         var xq = {};
