--- a/others/renrenTest.html
+++ b/others/renrenTest.html
@@ -470,7 +470,7 @@
         </div>
         
         <script src="../utils.js" type="text/javascript"></script>
-        <script type="text/javascript" src = "../base.js"></script>
+        <script type="text/javascript" src = "./base.js"></script>
         <script type="text/javascript">
           var btn_list = document.getElementsByClassName('radius-btn');
 
