--- a/vue/vue_vs_jquery.html
+++ b/vue/vue_vs_jquery.html
@@ -396,6 +396,7 @@
       </div>
 
       <div class="demo-panel" v-show="showType == 3.1">
+        <p>登高参赛报名申请， 提交表单：1~3；超过一张表单提交的成员会成为一队，不足3人则与其他队伍随机匹配</p>
         <h1 class="form-demo">3.1提交表单(jq)</h1>
       </div>
 
