代码小修改

--- a/vue/vue_vs_jquery.html
+++ b/vue/vue_vs_jquery.html
@@ -392,12 +392,15 @@
       </div>
 
       <div class="demo-panel" v-show="showType == 3">
+        <p>登高参赛报名申请， 提交表单：1~3；超过一张表单提交的成员会成为一队，不足3人则与其他队伍随机匹配</p>
         <h1 class="form-demo">3.提交表单(vue)</h1>
+
       </div>
 
       <div class="demo-panel" v-show="showType == 3.1">
         <p>登高参赛报名申请， 提交表单：1~3；超过一张表单提交的成员会成为一队，不足3人则与其他队伍随机匹配</p>
         <h1 class="form-demo">3.1提交表单(jq)</h1>
+        (bootstrap 3.x ui表单风格) 待添加
       </div>
 
       <script type="text/javascript" src="./vue.js"></script>
@@ -430,7 +433,7 @@
           vm = new Vue({
             el: 'body',
             data: {
-              showType: 2,
+              showType: 3.1,
               demo1: {
                 'step': 1,
                 'regStep': 1
