--- a/httpStatus.html
+++ b/httpStatus.html
@@ -7,42 +7,18 @@
         </title>
 
         <style type="text/css">
-          .demo-title{
-            text-align: center;
-          }
-          .table-l {
-            width: 30%;
-            font-weight: bold;
-          }
-          .table-r {
-            width: 70%;
-            font-weight: bold;
-          }
-          .demo-cont{
-            width:80%;
-            margin: 10px auto;
-          }
-          .table-h{
-            color: blue;
-          }
-          .demo-cont table{
-            width:100%;
-            border:1px solid #ccc;
-            border-collapse: collapse;
-          }
-          .demo-cont tr{
-            line-height: 2em;
-            border: 1px solid #ccc;
-          }
-          .demo-cont tr:hover{
-            background-color: #f5f5f5;
-          }
-          .demo-cont td{
-            padding-left:10px;
-          }
-          td:first-child{
-            border-right: 1px solid #ccc;
-          }
+          .demo-title{ text-align: center; }
+          .table-l { width: 30%;font-weight: bold; }
+          .table-r { width: 70%; font-weight: bold; }
+          .demo-cont{ width:80%; margin: 10px auto; }
+          .table-h{ color: blue; }
+          .demo-cont table{ width:100%; border:1px solid #ccc; border-collapse: collapse; }
+          .demo-cont tr{ line-height: 2em; border: 1px solid #ccc; }
+          .demo-cont tr:hover{ background-color: #f5f5f5; }
+          .demo-cont td{ padding-left:10px; }
+          td:first-child{ border-right: 1px solid #ccc; }
+          .nav-btns{ text-align:center; margin:0px; height:50px; line-height: 50px; padding:0px; }
+          .nav-btn{ list-style-type:none; padding:0 5px; margin:5px; float:left; cursor:pointer; }
         </style>
 
     </head>
@@ -51,6 +27,13 @@
         <h3 class="demo-title">常见的HTTP返回状态值</h3>
         
         <div class="demo-cont">
+          <ul class="nav-btns">
+            <li class="nav-btn">1XX</li>
+            <li class="nav-btn">2XX</li>
+            <li class="nav-btn">3XX</li>
+            <li class="nav-btn">4XX</li>
+            <li class="nav-btn">5XX</li>
+          </ul>
           <table>
             <tr class="table-h">
               <td class="table-l">状态码</td>
