新增 继承写法（公司）

--- a/cssCommonDemo.html
+++ b/cssCommonDemo.html
@@ -160,8 +160,8 @@
         <div class="u_face">
             <img id="uFace" src="images/dlam.jpg">
             <div class="u-face-pop" id="uFacePop">
-              <p>hi, 逗比你好</p>
-              <p>人生如戏全靠演技</p>
+              <p>hi, 逗比</p>
+              <p>以大部分人努力程度之低，根本轮不到拼天赋。。。</p>
               <div class="triangle-ico"></div>
             </div>
         </div>
